--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,9 +33,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-
   simple_animations: ^1.3.3
-  flutter_svg_provider: ^1.0.3
+  page_view_indicators: ^2.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
